--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.3.1
 Django==3.1.7
+django-classy-tags==2.0.0
+django-cookie-law==2.0.5
 django-debug-toolbar==3.2
 gunicorn==20.0.4
 psycopg2-binary==2.8.6
+pytest-runner==5.3.0
 pytz==2021.1
 sqlparse==0.4.1
